frontend/src/Public.styles.less
.public-item-operation {
  flex-grow: 1;
  display: flex;
  justify-content: flex-end;
  align-items: baseline;
}

.public-item-operation > div {
  margin-left: 0.5em;
  cursor: pointer;
}

.public-item-operation > span {
  margin-left: 0.5em;
  cursor: pointer;
}

